--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.3.1
   dio: ^4.0.4
+  get: ^4.6.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
