--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.isl_counter">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="isl_counter"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -31,4 +34,7 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+    
+
+
 </manifest>
